(Fix) Footer height on mobile
This makes the full footer visible on mobile screen width, and keeps the same
desktop footer height.

--- a/resources/assets/sass/main/_custom.scss
+++ b/resources/assets/sass/main/_custom.scss
@@ -11178,7 +11178,7 @@ body.movie .movie-heading, body.movie .movie-poster, body.tvshow .movie-heading,
   color: #ffffff;
   width: 100%;
   text-align: center;
-  height: 450px;
+  min-height: 450px;
   margin-top: 25px;
 }
 
